VFS-1223 Implement first revision of macaroon-based auth.

--- a/rel/sys.config
+++ b/rel/sys.config
@@ -29,6 +29,9 @@
 
         {ports_in_use, [dns_port, gui_redirect_port, gui_port, op_channel_port, rest_port]},
 
+        %% Also used as the certificate domain and to provider CRLs.
+        {http_domain, "127.0.0.1"},
+
         %% List of beam directories to be covered, cover is not started if list is empty
         {covered_dirs, []},
         %% List of modules to be excluded during cover analysis
@@ -38,7 +41,6 @@
         {grpca_dir, "resources/grpca"},
         {grpkey_file, "resources/grpca/grpkey.pem"},
         {grpcert_file, "resources/grpca/grpcert.pem"},
-        {grpcert_domain, "127.0.0.1"}, %% the cert domain is also used to provide CRLs
         {root_cacert_file, '/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem'},
 
         %% Provider channel config
@@ -48,10 +50,9 @@
         %% REST config
         {rest_port, 8443},
         {rest_https_acceptors, 50},
-        %% OpenID Provider for REST
-        {authorization_code_expiration_seconds, 600},
-        {access_token_expiration_seconds, 3600},
-        {openid_issuer_url, "https://onedata.org"},
+        %% Macaroons authorization
+        {authorization_macaroon_expiration_seconds, 31536000}, % 1 year
+        {authentication_macaroon_expiration_seconds, 900}, % 15 minutes
 
         %% GUI config
         {gui_port, 443},
