--- a/rebar.config
+++ b/rebar.config
@@ -50,12 +50,9 @@
     %% start during eunit tests, so we need to force start it
     {eunit, "epmd -daemon"},
     {compile, "mkdir -p test_distributed/log"},
-    %% gen_dev compilation
-    {clean, "make -C bamboos/gen_dev/ clean"},
-    {compile, "make -C bamboos/gen_dev/ compile"},
-    %% env_configurator compilation
-    {clean, "make -C bamboos/env_configurator/ clean"},
-    {compile, "make -C bamboos/env_configurator/ compile"}
+    %% bamboos compilation
+    {compile, "make -C bamboos compile"},
+    {clean, "make -C bamboos clean"}
 ]}.
 
 {post_hooks, [
