--- a/rebar.config
+++ b/rebar.config
@@ -27,11 +27,11 @@
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {mochiweb, "2.8.0", {git, "git://github.com/mochi/mochiweb.git", {tag, "v2.8.0"}}},
     {parse_trans, ".*", {git, "https://github.com/esl/parse_trans.git", {tag, "763462825e"}}},
-    {annotations, ".*", {git, "https://github.com/hyperthunk/annotations.git", {tag, "3f257db848"}}},
+    {annotations, ".*", {git, "https://github.com/RoXeon/annotations.git", "HEAD"}},
     {dao, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/dao.git", {tag, "014a10d4450"}}},
     {websocket_client, ".*", {git, "git://github.com/RoXeon/websocket_client", {tag, "c8a2554"}}},
     {prproto, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/prproto.git", {tag, "8b71875013"}}},
-    {macaroons, "0.5.1", {git, "https://github.com/kzemek/libmacaroons-erlang.git", {tag, "0.5.1"}}}
+    {macaroons, "0.5.2", {git, "https://github.com/kzemek/libmacaroons-erlang.git", {tag, "0.5.2"}}}
 ]}.
 
 %% plugins
