VFS-1223 Remove auth.config .

--- a/rebar.config
+++ b/rebar.config
@@ -43,6 +43,7 @@
 ]}.
 
 {pre_hooks, [
+    {'get-deps', "touch rel/resources/auth.config"},
     {'get-deps', "./update_onedev.sh"},
     %% Make dir for eunit' surefire test results
     {eunit, "mkdir -p test/eunit_results"},
