--- a/rebar.config
+++ b/rebar.config
@@ -23,6 +23,7 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
 
 {deps, [
+    {cluster_worker, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {tag, "abda7801eb6"}}},
     {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "a794a1d"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {parse_trans, "2.9.2", {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
