VFS-1453 running gr cluster & datastore ct test

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -23,6 +23,9 @@
             % n2o is a ctool dep, but it is not listed in ctool.app.src,
             % which requires this line to include it in the package (but not start it)
             {n2o, load},
+            %
+            mnesia,
+            {cluster_worker, load},
             globalregistry
         ]},
     {rel, "start_clean", "",
