VFS-1453 dns with load balancing

--- a/rel/resources/dns.config
+++ b/rel/resources/dns.config
@@ -3,11 +3,12 @@
     % Canonical domain name
     {cname, "onedata.org"},
     % IP addresses of servers in the domain (list of IPs for every hostname).
+    % "ALL" is resolved as all GR worker ips.
     % Must include NS and MX servers.
     % All hostnames must end with cname.
     {ip_addresses, [
-        {"onedata.org", ["127.0.0.1"]},
-        {"ns.onedata.org", ["127.0.0.1"]},
+        {"onedata.org", ["ALL"]},
+        {"ns.onedata.org", ["ALL"]},
         {"mail.onedata.org", ["127.0.0.1"]}
     ]},
     % Hostnames of domain's name servers
