--- a/rel/sys.config
+++ b/rel/sys.config
@@ -48,6 +48,9 @@
         %% Also used as the certificate domain and to provider CRLs.
         {http_domain, "127.0.0.1"},
 
+        %% Used by load balancing (for DNS)
+        {external_ip, "127.0.0.1"},
+
         %% List of beam directories to be covered, cover is not started if list is empty
         {covered_dirs, []},
         %% List of modules to be excluded during cover analysis
