--- a/rebar.config
+++ b/rebar.config
@@ -23,12 +23,12 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "e8ab9eb9995"}}},
+    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {branch, "feature/VFS-1523-dns-migrated-from-ctool"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {parse_trans, "2.9.2", {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
     {annotations, ".*", {git, "https://github.com/RoXeon/annotations.git", "HEAD"}},
     {prproto, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/prproto.git", {tag, "8b71875013"}}},
-    {cluster_worker, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {tag, "d4e1d905dfd"}}}
+    {cluster_worker, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {branch, "feature/VFS-1523-dns-migrated-from-ctool"}}}
 ]}.
 
 %% plugins
