Disable cover in eunit

--- a/rebar.config
+++ b/rebar.config
@@ -16,8 +16,9 @@
 %% to include deps headers
 {lib_dirs, ["deps"]}.
 
-{cover_enabled, true}.
-{cover_export_enabled, true}.
+%% TODO - enable after upgrade to Erlang 18.3
+%% {cover_enabled, true}.
+%% {cover_export_enabled, true}.
 
 %% eunit opts - Maven-like output formatting
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
