--- a/rebar.config
+++ b/rebar.config
@@ -24,7 +24,7 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "877f7c3104a"}}},
+    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "bf51825a21b"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {parse_trans, "2.9.2", {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
     {annotations, ".*", {git, "https://github.com/RoXeon/annotations.git", "HEAD"}},
@@ -38,7 +38,7 @@
 {erl_opts, [
     fail_on_warning,
     debug_info,
-    {src_dirs, ["src"]}%, "test_distributed"]}
+    {src_dirs, ["src"]}
 ]}.
 
 {pre_hooks, [
@@ -57,7 +57,6 @@
 
 {post_hooks, [
     {'get-deps', "cp -Rf ./deps/ctool/src/gui_static/* ./src/gui/gui_static/"}
-%%    {compile, "cp ebin/*SUITE* test_distributed/"}
 ]}.
 
 %% Options for erlyDTL (templates for GUI)
