--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -8,11 +8,11 @@
             %% show info level or higher level logs at console
             {lager_console_backend, info},
             %% rotate error log once a month (first day of month, 1 a.m) or when it reaches 1 GB; keep 1000 rotated logs
-            {lager_file_backend, [{file, "log/error.log"}, {level, error}, {size, 1048576000}, {date, "$M1D1"}, {count, 1000}]},
+            {lager_file_backend, [{file, "{{platform_log_dir}}/error.log"}, {level, error}, {size, 1048576000}, {date, "$M1D1"}, {count, 1000}]},
             %% rotate info log once a week (friday at 11 p.m) or when it reaches 100 MB; keep 100 rotated logs
-            {lager_file_backend, [{file, "log/info.log"}, {level, info}, {size, 104857600}, {date, "$W5D23"}, {count, 100}]},
+            {lager_file_backend, [{file, "{{platform_log_dir}}/info.log"}, {level, info}, {size, 104857600}, {date, "$W5D23"}, {count, 100}]},
             %% rotate info log once a day (at midnight) or when it reaches 10 MB; keep 10 rotated logs
-            {lager_file_backend, [{file, "log/debug.log"}, {level, debug}, {size, 10485760}, {date, "$D0"}, {count, 10}]}
+            {lager_file_backend, [{file, "{{platform_log_dir}}/debug.log"}, {level, debug}, {size, 10485760}, {date, "$D0"}, {count, 10}]}
         ]},
         {error_logger_hwm, 200},
         % when lager should change mode to synchronous (log queue is longer than async_threshold)
@@ -42,7 +42,7 @@
         % funcionalities used in tests.
         {dev_mode, false},
 
-        {ports_in_use, [dns_port, gui_redirect_port, gui_port, op_channel_port, rest_port]},
+        {application_ports, [53, 80, 443, 5555, 8443]},
 
         %% Also used as the certificate domain and to provider CRLs.
         {http_domain, "127.0.0.1"},
@@ -56,13 +56,9 @@
         {covered_excluded_modules, []},
 
         %% GRP config
-        {grpca_dir, "resources/grpca"},
-        {grpkey_file, "resources/grpca/grpkey.pem"},
-        {grpcert_file, "resources/grpca/grpcert.pem"},
-
-        %% Provider channel config
-        {op_channel_port, 5555},
-        {op_channel_https_acceptors, 50},
+        {grpca_dir, "{{platform_data_dir}}/grpca"},
+        {grpkey_file, "{{platform_data_dir}}/grpca/grpkey.pem"},
+        {grpcert_file, "{{platform_data_dir}}/grpca/grpcert.pem"},
 
         %% REST config
         {rest_port, 8443},
@@ -78,9 +74,9 @@
         {gui_max_keepalive, 30},
         {gui_sessions_cookie_ttl, 3600}, % one hour
         %% certs todo generate dedicated certs (this are example ones)
-        {gui_key_file, "resources/certs/gui_key.pem"},
-        {gui_cert_file, "resources/certs/gui_cert.pem"},
-        {gui_cacert_file, "resources/cacerts/gui_cacert.pem"},
+        {gui_key_file, "{{platform_etc_dir}}/certs/gui_key.pem"},
+        {gui_cert_file, "{{platform_etc_dir}}/certs/gui_cert.pem"},
+        {gui_cacert_file, "{{platform_etc_dir}}/cacerts/gui_cacert.pem"},
 
         %% HTTP redirector config
         {gui_redirect_port, 80},
@@ -88,7 +84,7 @@
 
         %% DB config
         {db_nodes, ['db@127.0.0.1']},
-        {view_def_location, "resources/views/"},
+        {view_def_location, "{{platform_data_dir}}/views/"},
 
         %% DNS config
         %% DNS port
