--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -14,7 +14,6 @@
             public_key,
             crypto,
             ssl,
-            prproto,
             % Meck is needed only for development purposes, should be removed before release.
             meck,
             % All ctool deps will be included in the release package,
@@ -47,33 +46,28 @@
 
 {target_dir, "globalregistry"}.
 
+{overlay_vars, "vars.config"}.
+
 {overlay, [
-    %% Directory for System Architecture Support Libraries (SASL) logging
-    {mkdir, "log/sasl"},
-    %% Directory for internal project data (e.g. certificates)
-    {mkdir, "resources"},
-
-    %% Copy start-up scripts
-    {copy, "../rel/files/erl", "\{\{erts_vsn\}\}/bin/erl"},
-    {copy, "../rel/files/nodetool", "\{\{erts_vsn\}\}/bin/nodetool"},
-    {copy, "globalregistry/bin/start_clean.boot", "\{\{erts_vsn\}\}/bin/start_clean.boot"},
-    {copy, "../rel/files/globalregistry", "bin/globalregistry"},
-    {copy, "../rel/files/globalregistry.cmd", "bin/globalregistry.cmd"},
-    {copy, "../rel/files/start_erl.cmd", "bin/start_erl.cmd"},
-    {copy, "../rel/files/install_upgrade.escript", "bin/install_upgrade.escript"},
-
-    %% Copy resources
-    {copy, "resources", "./"},
-    {copy, "../src/gui/gui_static/", "resources"},
-    {copy, "../certs", "resources"},
-    {copy, "../cacerts", "resources"},
-    {copy, "../grpca", "resources"},
-
-    %% Copy license and documentation
-    {copy, "../LICENSE.txt", "./"},
-    {copy, "../README.md", "./"},
+    %% Copy base files for starting and interacting with node
+    {copy, "../deps/node_package/priv/base/erl", "{{erts_vsn}}/bin/erl"},
+    {copy, "../deps/node_package/priv/base/nodetool", "{{erts_vsn}}/bin/nodetool"},
+    {template, "../deps/node_package/priv/base/runner", "bin/globalregistry"},
+    {template, "../deps/node_package/priv/base/env.sh", "lib/env.sh"},
 
     %% Copy config files
-    {copy, "sys.config", "releases/\{\{rel_vsn\}\}/sys.config"},
-    {copy, "files/vm.args", "releases/\{\{rel_vsn\}\}/vm.args"}
+    {mkdir, "etc"},
+    {template, "files/app.config", "etc/app.config"},
+    {template, "files/vm.args", "etc/vm.args"},
+    {copy, "../cacerts", "./etc/"},
+    {copy, "../certs", "./etc/"},
+
+    %% Copy additional data files
+    {copy, "./data/", "./"},
+    {copy, "../src/gui/gui_static/", "./data/"},
+    {copy, "../certs", "./data/"},
+    {copy, "../cacerts", "./data/"},
+    {copy, "../grpca", "./data/"},
+    {copy, "../LICENSE.txt", "./data/"},
+    {copy, "../README.md", "./data/"}
 ]}.
