--- a/rebar.config
+++ b/rebar.config
@@ -24,12 +24,12 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {branch, "feature/VFS-1523-dns-migrated-from-ctool"}}},
+    {ctool, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {tag, "28b28c235c3"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {parse_trans, "2.9.2", {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
     {annotations, ".*", {git, "https://github.com/RoXeon/annotations.git", "HEAD"}},
-    {prproto, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/prproto.git", {tag, "8b71875013"}}},
-    {cluster_worker, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {branch, "feature/VFS-1523-dns-migrated-from-ctool"}}}
+    {cluster_worker, ".*", {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {tag, "8cef0c6bb7a"}}},
+    {node_package, ".*", {git, "git://github.com/onedata/node_package.git", {branch, "2.0.2"}}}
 ]}.
 
 %% plugins
@@ -42,14 +42,13 @@
 ]}.
 
 {pre_hooks, [
-    {'get-deps', "touch rel/resources/auth.config"},
+    {'get-deps', "touch rel/data/auth.config"},
     {'get-deps', "./update_onedev.sh"},
     %% Make dir for eunit' surefire test results
     {eunit, "mkdir -p test/eunit_results"},
     %% Sometimes, in some cases epmd daemon doesn't
     %% start during eunit tests, so we need to force start it
     {eunit, "epmd -daemon"},
-    {compile, "mkdir -p test_distributed/log"},
     %% bamboos compilation
     {compile, "make -C bamboos compile"},
     {clean, "make -C bamboos clean"}
