Add missing build dependencies.

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -41,6 +41,8 @@
 {rpm_requires,
     ", openssl"}.
 {rpm_build_requires,
+    ", automake"
+    ", bc"
     ", cmake >= 3.0.0"
     ", erlang-common_test >= 18.0"
     ", erlang-edoc >= 18.0"
@@ -50,6 +52,7 @@
     ", erlang-reltool >= 18.0"
     ", erlang-xmerl >= 18.0"
     ", gcc-c++ >= 4.9.0"
+    ", git"
     ", golang"
     ", libsodium-devel"
     ", libtool"
@@ -59,10 +62,13 @@
 {deb_depends,
     "libssl"}.
 {deb_build_depends,
-    "cmake (>= 3.0.0)"
+    "automake"
+    ", bc"
+    ", cmake (>= 3.0.0)"
     ", erlang (>= 18.0)"
     ", erlang-src (>= 18.0)"
     ", g++ (>= 4.9.0)"
+    ", git"
     ", golang-go"
     ", libprotobuf-dev (>= 2.6.0)"
     ", libprotoc-dev (>= 2.6.0)"
