--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -1,15 +1,15 @@
 %%
 %% Packaging
 %%
-{package_name, "globalregistry"}.
-{package_install_name, "globalregistry"}.
-{package_install_user, "globalregistry"}.
+{package_name, "oz_worker"}.
+{package_install_name, "oz_worker"}.
+{package_install_user, "oz_worker"}.
 {package_runner_user, "root"}.
 {package_install_group, "onedata"}.
-{package_install_user_desc, "globalregistry user"}.
-{package_shortdesc, "globalregistry worker node"}.
-{package_desc, "The worker node of globalregistry cluster, part of onedata project"}.
-{package_commands, {list, [[{name, "globalregistry"}]]}}.
+{package_install_user_desc, "oz_worker user"}.
+{package_shortdesc, "oz_worker worker node"}.
+{package_desc, "The worker node of onezone cluster, part of onedata project"}.
+{package_commands, {list, [[{name, "oz_worker"}]]}}.
 {package_patch_dir, "onedata-patches"}.
 {bin_or_sbin, "sbin"}.
 {license_type, "MIT"}.
@@ -56,9 +56,7 @@
     ", golang"
     ", libsodium-devel"
     ", libtool"
-    ", ninja-build"
-    ", protobuf-compiler >= 2.6.0"
-    ", protobuf-devel >= 2.6.0"}.
+    ", ninja-build"}.
 {deb_depends,
     "libssl"}.
 {deb_build_depends,
@@ -74,6 +72,4 @@
     ", libprotoc-dev (>= 2.6.0)"
     ", libsodium-dev"
     ", libtool"
-    ", ninja-build"
-    ", pkg-config"
-    ", protobuf-compiler (>= 2.6.0)"}.
+    ", ninja-build"}.
