--- a/rel/data/dns.config
+++ b/rel/data/dns.config
@@ -1,4 +1,4 @@
-% Zone definition for GlobalRegistry DNS server
+% Zone definition for oz_worker DNS server
 {zone, [
     % Canonical domain name
     {cname, "onedata.org"},
