--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -36,13 +36,14 @@
 
     ]},
 
-    %% globalregistry config
-    {globalregistry, [
+    %% oz_worker config
+    {oz_worker, [
         % Developer mode - enables developer features such as REST endpoints with
         % funcionalities used in tests.
         {dev_mode, false},
 
-        {application_ports, [53, 80, 443, 5555, 8443]},
+        % Ports used by application
+        {application_ports, [53, 80, 443, 8443]},
 
         %% Also used as the certificate domain and to provider CRLs.
         {http_domain, "127.0.0.1"},
@@ -55,10 +56,10 @@
         %% List of modules to be excluded during cover analysis
         {covered_excluded_modules, []},
 
-        %% GRP config
-        {grpca_dir, "{{platform_data_dir}}/grpca"},
-        {grpkey_file, "{{platform_data_dir}}/grpca/grpkey.pem"},
-        {grpcert_file, "{{platform_data_dir}}/grpca/grpcert.pem"},
+        %% zone CA config
+        {zone_ca_dir, "{{platform_data_dir}}/zone_ca"},
+        {zone_key_file, "{{platform_data_dir}}/zone_ca/zone_key.pem"},
+        {zone_cert_file, "{{platform_data_dir}}/zone_ca/zone_cert.pem"},
 
         %% REST config
         {rest_port, 8443},
