--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -5,7 +5,7 @@
     {lib_dirs, ["../deps"]},
     {erts, [{mod_cond, derived}, {app_file, strip}]},
     {app_file, strip},
-    {rel, "globalregistry", "1.0.0",
+    {rel, "oz_worker", "1.0.0",
         [
             kernel,
             stdlib,
@@ -25,14 +25,14 @@
             %
             mnesia,
             {cluster_worker, load},
-            globalregistry
+            oz_worker
         ]},
     {rel, "start_clean", "",
         [
             kernel,
             stdlib
         ]},
-    {boot_rel, "globalregistry"},
+    {boot_rel, "oz_worker"},
     {profile, embedded},
     {incl_cond, derived},
     {excl_archive_filters, [".*"]}, %% Do not archive built libs
@@ -40,11 +40,11 @@
         "^erts.*/bin/(dialyzer|typer)",
         "^erts.*/(doc|info|include|lib|man|src)"]},
     {excl_app_filters, ["\.gitignore"]},
-    {app, globalregistry, [{mod_cond, app}, {incl_cond, include}, {lib_dir, ".."}]},
+    {app, oz_worker, [{mod_cond, app}, {incl_cond, include}, {lib_dir, ".."}]},
     {app, hipe, [{incl_cond, exclude}]}
 ]}.
 
-{target_dir, "globalregistry"}.
+{target_dir, "oz_worker"}.
 
 {overlay_vars, "vars.config"}.
 
@@ -52,7 +52,7 @@
     %% Copy base files for starting and interacting with node
     {copy, "../deps/node_package/priv/base/erl", "{{erts_vsn}}/bin/erl"},
     {copy, "../deps/node_package/priv/base/nodetool", "{{erts_vsn}}/bin/nodetool"},
-    {template, "../deps/node_package/priv/base/runner", "bin/globalregistry"},
+    {template, "../deps/node_package/priv/base/runner", "bin/oz_worker"},
     {template, "../deps/node_package/priv/base/env.sh", "lib/env.sh"},
 
     %% Copy config files
@@ -67,7 +67,7 @@
     {copy, "../src/gui/gui_static/", "./data/"},
     {copy, "../certs", "./data/"},
     {copy, "../cacerts", "./data/"},
-    {copy, "../grpca", "./data/"},
+    {copy, "../zone_ca", "./data/"},
     {copy, "../LICENSE.txt", "./data/"},
     {copy, "../README.md", "./data/"}
 ]}.
