--- a/rel/vars.config
+++ b/rel/vars.config
@@ -11,7 +11,7 @@
 {crash_dump,   "{{platform_log_dir}}/erl_crash.dump"}.
 
 %%
-%% bin/globalregistry
+%% bin/oz_worker
 %%
 {data_dir,           "{{target_dir}}/data"}.
 {runner_script_dir,  "\`cd \\`dirname $0\\` && /bin/pwd\`"}.
@@ -22,4 +22,4 @@
 {runner_patch_dir,   "$RUNNER_BASE_DIR/lib/onedata-patches"}.
 {pipe_dir,           "/tmp/$RUNNER_BASE_DIR/"}.
 {runner_user,        "root"}.
-{runner_wait_process, "globalregistry_sup"}.
+{runner_wait_process, "oz_worker_sup"}.
