--- a/bamboos/example_env/appmock_gr.json
+++ b/bamboos/example_env/appmock_gr.json
@@ -8,8 +8,8 @@
             "input_dir": "rel/op_worker",
             "target_dir": "rel/test_cluster"
         },
-        "globalregistry": {
-            "input_dir": "rel/globalregistry",
+        "oz_worker": {
+            "input_dir": "rel/oz_worker",
             "target_dir": "rel/test_cluster"
         },
         "appmock": {
@@ -65,18 +65,18 @@
                         "db_nodes": [
                             "riaknode1"
                         ],
-                        "global_registry_domain": "gr",
-                        "verify_gr_cert": false
+                        "zone_domain": "oz",
+                        "verify_oz_cert": false
                     }
                 }
             }
         }
     },
     "appmock_domains": {
-        "gr": {
+        "oz": {
             "appmock": {
                 "appmock1": {
-                    "mocked_app": "globalregistry",
+                    "mocked_app": "oz_worker",
                     "vm.args": {
                         "setcookie": "cookie2"
                     },
