Change package name to oz-worker.

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -1,7 +1,7 @@
 %%
 %% Packaging
 %%
-{package_name, "oz_worker"}.
+{package_name, "oz-worker"}.
 {package_install_name, "oz_worker"}.
 {package_install_user, "oz_worker"}.
 {package_runner_user, "root"}.
@@ -72,4 +72,5 @@
     ", libprotoc-dev (>= 2.6.0)"
     ", libsodium-dev"
     ", libtool"
-    ", ninja-build"}.
+    ", ninja-build"
+    ", pkg-config"}.
