Fix deb package dependency.

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -58,7 +58,7 @@
     ", libtool"
     ", ninja-build"}.
 {deb_depends,
-    "libssl"}.
+    "openssl"}.
 {deb_build_depends,
     "automake"
     ", bc"
