VFS-1629 trivial case of subscription covered

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -24,6 +24,7 @@
             {n2o, load},
             %
             mnesia,
+            couchbeam,
             {cluster_worker, load},
             oz_worker
         ]},
