--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -24,6 +24,12 @@
 
     %% cluster_worker config
     {cluster_worker, [
+        %% ===================================================================
+        %% DATASTORE
+        %% ===================================================================
+
+        %% Persistence driver to use in datastore.
+        {persistence_driver_module, 'couchdb_datastore_driver'},
 
         %% ===================================================================
         %% PLUGINS
