VFS-1638 adjust sesion model

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -73,7 +73,7 @@
         {gui_https_acceptors, 100},
         {gui_socket_timeout, 60000},
         {gui_max_keepalive, 30},
-        {gui_sessions_cookie_ttl, 3600}, % one hour
+        {gui_cookie_ttl, 3600}, % one hour
         %% certs todo generate dedicated certs (this are example ones)
         {gui_key_file, "{{platform_etc_dir}}/certs/gui_key.pem"},
         {gui_cert_file, "{{platform_etc_dir}}/certs/gui_cert.pem"},
