--- a/rebar.config
+++ b/rebar.config
@@ -23,12 +23,12 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, "2.0.1", {git, "${ONEDATA_GIT_URL}/ctool.git", {tag, "4863ad3"}}},
+    {ctool, "2.0.2", {git, "${ONEDATA_GIT_URL}/ctool.git", {tag, "2.0.2"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {parse_trans, "2.9.2", {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
     {annotations, ".*", {git, "https://github.com/RoXeon/annotations.git", "HEAD"}},
     {dao, ".*", {git, "${ONEDATA_GIT_URL}/dao.git", {tag, "014a10d4450"}}},
-    {prproto, ".*", {git, "${ONEDATA_GIT_URL}/prproto.git", {tag, "8b71875013"}}}
+    {prproto, "1.0.0*", {git, "${ONEDATA_GIT_URL}/prproto.git", {tag, "1.0.0"}}}
 ]}.
 
 %% plugins
