--- a/src/http/gui/bower.json
+++ b/src/http/gui/bower.json
@@ -15,6 +15,7 @@
     "bootstrap": "~3.3.5",
     "bootstrap-sass": "^3.3.6",
     "owl-carousel": "1.3.2",
-    "bind-first": "jquery.bind-first#^0.2.3"
+    "bind-first": "jquery.bind-first#^0.2.3",
+    "jquery-mousewheel": "^3.1.13"
   }
 }
