VFS-1638 add new gui_livereload modes

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -75,6 +75,8 @@
         {gui_max_keepalive, 30},
         {gui_cookie_ttl, 3600}, % one hour
         %% certs todo generate dedicated certs (this are example ones)
+        %% Directory in release where static gui files are stored
+        {gui_static_files_root, "{{platform_data_dir}}/gui_static"},
         {gui_key_file, "{{platform_etc_dir}}/certs/gui_key.pem"},
         {gui_cert_file, "{{platform_etc_dir}}/certs/gui_cert.pem"},
         {gui_cacert_file, "{{platform_etc_dir}}/cacerts/gui_cacert.pem"},
