--- a/src/http/gui/bower.json
+++ b/src/http/gui/bower.json
@@ -16,6 +16,11 @@
     "bootstrap-sass": "^3.3.6",
     "owl-carousel": "1.3.2",
     "bind-first": "jquery.bind-first#^0.2.3",
-    "jquery-mousewheel": "^3.1.13"
+    "jquery-mousewheel": "^3.1.13",
+    "ember-localstorage-adapter": "^0.5.5"
+  },
+  "resolutions": {
+    "ember": "1.13.12",
+    "ember-data": "1.13.15"
   }
 }
