--- a/src/http/gui/package.json
+++ b/src/http/gui/package.json
@@ -40,6 +40,7 @@
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
     "ember-i18n": "4.2.0",
-    "ember-simple-auth": "1.0.1"
+    "ember-simple-auth": "1.0.1",
+    "ember-localstorage-adapter": "0.5.5"
   }
 }
