--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -57,6 +57,14 @@
     ", libsodium-devel"
     ", libtool"
     ", ninja-build"}.
+{rpm_prep,
+    "wget https://nodejs.org/dist/v5.6.0/node-v5.6.0-linux-x64.tar.gz"
+    "; tar -zxvf node-v5.6.0-linux-x64.tar.gz"
+    "; mv node-v5.6.0-linux-x64 $RPM_BUILD_DIR/node"
+    "; export PATH=$PATH:$RPM_BUILD_DIR/node/bin"
+    "; npm install -g bower ember-cli jsdoc"}.
+{rpm_build,
+    "export PATH=$PATH:$RPM_BUILD_DIR/node/bin"}.
 {deb_depends,
     "openssl"}.
 {deb_build_depends,
