VFS-1661 Add wget to package build requirements.

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -56,7 +56,8 @@
     ", golang"
     ", libsodium-devel"
     ", libtool"
-    ", ninja-build"}.
+    ", ninja-build"
+    ", wget"}.
 {rpm_prep,
     "wget https://nodejs.org/dist/v5.6.0/node-v5.6.0-linux-x64.tar.gz"
     "; tar -zxvf node-v5.6.0-linux-x64.tar.gz"
@@ -81,4 +82,5 @@
     ", libsodium-dev"
     ", libtool"
     ", ninja-build"
-    ", pkg-config"}.
+    ", pkg-config"
+    ", wget"}.
