--- a/src/http/gui/bower.json
+++ b/src/http/gui/bower.json
@@ -17,7 +17,8 @@
     "owl-carousel": "1.3.2",
     "bind-first": "jquery.bind-first#^0.2.3",
     "jquery-mousewheel": "^3.1.13",
-    "ember-localstorage-adapter": "^0.5.5"
+    "ember-localstorage-adapter": "^0.5.5",
+    "jquery-searchable": "~1.1.0"
   },
   "resolutions": {
     "ember": "1.13.12",
