--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -88,11 +88,17 @@
         {gui_max_keepalive, 30},
         {gui_cookie_ttl, 3600}, % one hour
         %% certs todo generate dedicated certs (this are example ones)
-        %% Directory in release where static gui files are stored
-        {gui_static_files_root, "{{platform_data_dir}}/gui_static"},
         {gui_key_file, "{{platform_etc_dir}}/certs/gui_key.pem"},
         {gui_cert_file, "{{platform_etc_dir}}/certs/gui_cert.pem"},
         {gui_cacert_file, "{{platform_etc_dir}}/cacerts/gui_cacert.pem"},
+
+        %% Directory where onezone tries to find static files of a custom GUI.
+        %% If the directory is not empty, it will serve the static files
+        %% from it. If not, it will fall back to default, embedded GUI.
+        {gui_custom_static_root, "/var/www/html"},
+        %% Directory where static files of default, embedded GUI are kept.
+        %% Used when gui_custom_static_root is non-existent or empty.
+        {gui_default_static_root, "{{platform_data_dir}}/gui_static"},
 
         %% HTTP redirector config
         {gui_redirect_port, 80},
