VFS-1699 Add overlay vars to Makefile.

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -46,7 +46,9 @@
         %% Number of dns tcp acceptors
         {dns_tcp_acceptor_pool_size, 20},
         %% Time (in sec) after which dns closes idle connection
-        {dns_tcp_timeout, 20}
+        {dns_tcp_timeout, 20},
+        %% DNS config file location
+        {dns_config_file, "{{platform_data_dir}}/dns.config"}
     ]},
 
     %% oz_worker config
