VFS-1738 rename zone_ca to ozpca

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -70,9 +70,9 @@
         {covered_excluded_modules, []},
 
         %% zone CA config
-        {zone_ca_dir, "{{platform_data_dir}}/zone_ca"},
-        {zone_key_file, "{{platform_data_dir}}/zone_ca/zone_key.pem"},
-        {zone_cert_file, "{{platform_data_dir}}/zone_ca/zone_cert.pem"},
+        {ozpca_dir, "{{platform_data_dir}}/ozpca"},
+        {oz_key_file, "{{platform_data_dir}}/ozpca/oz_key.pem"},
+        {oz_cert_file, "{{platform_data_dir}}/ozpca/oz_cert.pem"},
 
         %% REST config
         {rest_port, 8443},
