--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -67,7 +67,7 @@
     {copy, "../src/gui/gui_static/", "./data/"},
     {copy, "../certs", "./data/"},
     {copy, "../cacerts", "./data/"},
-    {copy, "../zone_ca", "./data/"},
+    {copy, "../ozpca", "./data/"},
     {copy, "../LICENSE.txt", "./data/"},
     {copy, "../README.md", "./data/"}
 ]}.
