--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -62,7 +62,7 @@
         {dev_mode, false},
 
         % Ports used by application
-        {application_ports, [53, 80, 443, 8443]},
+        {application_ports, [53, 80, 443, 8443, 9443]},
 
         %% Also used as the certificate domain and to provider CRLs.
         {http_domain, "127.0.0.1"},
@@ -104,6 +104,14 @@
 
         %% DB config
         {db_nodes, ['db@127.0.0.1']},
-        {view_def_location, "{{platform_data_dir}}/views/"}
+        {view_def_location, "{{platform_data_dir}}/views/"},
+
+        %% Subscriptions config
+        {subscription_cache_size, 200},
+        {subscription_batch_ttl, 2000},
+        {changes_stream_restart_delay_seconds, 20},
+        {changes_bridge_name_await_seconds, 300},
+        {subscriptions_wss_port, 9443},
+        {subscroptions_https_acceptors, 50}
     ]}
 ].
