--- a/rebar.config
+++ b/rebar.config
@@ -23,8 +23,8 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, "2.0.2", {git, "${ONEDATA_GIT_URL}/ctool.git", {tag, "624b8f75a5c"}}},
-    {gui, "1.0.1", {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {tag, "9211bad"}}},
+    {ctool, "3.0.0-alpha2", {git, "${ONEDATA_GIT_URL}/ctool.git", {tag, "624b8f75a5c"}}},
+    {gui, "1.0.1", {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {tag, "36230e0"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {parse_trans, "2.9.2", {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
     {annotations, ".*", {git, "https://github.com/RoXeon/annotations.git", "HEAD"}},
