--- a/rebar.config
+++ b/rebar.config
@@ -23,7 +23,7 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, "2.0.2", {git, "${ONEDATA_GIT_URL}/ctool.git", {tag, "f36ca86"}}},
+    {ctool, "3.0.0-alpha2", {git, "${ONEDATA_GIT_URL}/ctool.git", {tag, "d5a45c03396"}}},
     {meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
     {parse_trans, "2.9.2", {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
     {annotations, ".*", {git, "https://github.com/RoXeon/annotations.git", "HEAD"}},
