VFS-1629 limiting db fetch life

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -107,6 +107,7 @@
         {view_def_location, "{{platform_data_dir}}/views/"},
 
         %% Subscriptions config
+        {history_changes_stream_life_limit_seconds, 10},
         {changes_stream_presence_check_interval_seconds, 30},
         {subscription_cache_size, 200},
         {subscription_batch_ttl, 2000},
