VFS-1741 Pull in new ctool and cluster-worker.

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -57,6 +57,7 @@
     ", libsodium-devel"
     ", libtool"
     ", ninja-build"
+    ", python"
     ", wget"}.
 {rpm_prep,
     "wget https://nodejs.org/dist/v5.6.0/node-v5.6.0-linux-x64.tar.gz"
@@ -83,4 +84,5 @@
     ", libtool"
     ", ninja-build"
     ", pkg-config"
+    ", python"
     ", wget"}.
