VFS-1598 Fix auth config load.

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -93,6 +93,7 @@
         {gui_key_file, "{{platform_etc_dir}}/certs/gui_key.pem"},
         {gui_cert_file, "{{platform_etc_dir}}/certs/gui_cert.pem"},
         {gui_cacert_file, "{{platform_etc_dir}}/cacerts/gui_cacert.pem"},
+        {auth_config_file, "{{platform_data_dir}}/auth.config"},
 
         %% Directory where onezone tries to find static files of a custom GUI.
         %% If the directory is not empty, it will serve the static files
