VFS-1629 refactoring outboxes & eliminating fetches for changes being about to be included in cache

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -113,7 +113,9 @@
         %% Subscriptions config
         {history_changes_stream_life_limit_seconds, 10},
         {changes_stream_presence_check_interval_seconds, 30},
-        {subscription_cache_size, 200},
+        {wait_for_latest_changes_in_cache, 1500},
+        {subscriptions_sent_revisions_limit, 40},
+        {subscription_cache_size, 1000},
         {subscription_batch_ttl, 2000},
         {subscriptions_wss_port, 7443},
         {subscroptions_https_acceptors, 50}
