Squashed 'bamboos/' changes from 5ecda65..17020db
17020db VFS-1728  -change date in timeouts.py
69734e0 VFS-1728  - replace zone_domain with oz_domain
f2a3e1d Merge remote-tracking branch 'origin/develop' into feature/VFS-1728-timeouts-update
b69eefd Merge pull request #101 in VFS/bamboos from feature/VFS-1652-define-space-storage-per-provider to develop
0886649 VFS-1728  - increase SYNC_NODES_TIMEOUT in release_configurator
455a41d VFS-1728 -fix dns timeout name
fdd69a8 VFS-1728 - move request timeout to timeouts.py
434dc53 VFS-1652 Change sample config.
1b704e9 Merge remote-tracking branch 'origin/develop' into feature/VFS-1728-timeouts-update
43e9d79 VFS-1652 Update single_gr_two_providers.json example.
c713866 VFS-1652 Allow storage configuration per each provider of space, compile helper escript modules dynamically.
73001f3 Merge pull request #99 in VFS/bamboos from hotfix/VFS-1753-fix-return-code-from-ct_run to develop
5687837 Merge remote-tracking branch 'origin/develop' into hotfix/VFS-1753-fix-return-code-from-ct_run
fa6ebbe VFS-1753 skipped_test function defined in both ct_run and test_run
3fbf501 Merge pull request #97 in VFS/bamboos from feature/VFS-1598-integrate-onepanel-with-onezone to develop
da09f27 Merge branch 'develop' of ssh://git.plgrid.pl:7999/vfs/bamboos into feature/VFS-1598-integrate-onepanel-with-onezone
f2b8dbb Merge pull request #98 in VFS/bamboos from hotfix/VFS-1753-fix-return-code-from-ct_run to develop
16bb701 VFS-1753 fix different keys in junit report for skipped tests
0146685 Merge branch 'develop' of ssh://git.plgrid.pl:7999/vfs/bamboos into feature/VFS-1598-integrate-onepanel-with-onezone
86d059f Merge pull request #96 in VFS/bamboos from bugfix/VFS-1753-fix-return-code-from-ct_run to develop
4b60555 Merge pull request #93 in VFS/bamboos from feature/VFS-1677-acceptance-tests-started-for-many to develop
99165fb Merge remote-tracking branch 'origin/develop' into feature/VFS-1677-acceptance-tests-started-for-many
52a07c5 Merge pul

--- a/example_env/appmock_gr.json
+++ b/example_env/appmock_gr.json
@@ -66,9 +66,9 @@
                                 "cm1"
                             ],
                             "db_nodes": [
-                                "riaknode1"
+                                "dbnode1"
                             ],
-                            "zone_domain": "oz",
+                            "oz_domain": "oz",
                             "verify_oz_cert": false
                         }
                     }
