--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -84,7 +84,10 @@
         {rest_https_acceptors, 50},
         %% Macaroons authorization
         {authorization_macaroon_expiration_seconds, 31536000}, % 1 year
-        {authentication_macaroon_expiration_seconds, 900}, % 15 minutes
+%%        {authentication_macaroon_expiration_seconds, 900}, % 15 minutes
+        % @todo for now make the authentication macaroons live longer,
+        % until automatic refreshing by provider is implemented: VFS-1766
+        {authentication_macaroon_expiration_seconds, 36000}, % 10 hours
 
         %% GUI config
         {gui_port, 443},
