--- a/src/http/gui/bower.json
+++ b/src/http/gui/bower.json
@@ -17,7 +17,8 @@
     "bind-first": "jquery.bind-first#^0.2.3",
     "jquery-mousewheel": "^3.1.13",
     "ember-localstorage-adapter": "^0.5.5",
-    "jquery-searchable": "~1.1.0"
+    "jquery-searchable": "~1.1.0",
+    "clipboard": "~1.5.5"
   },
   "resolutions": {
     "ember": "1.13.12",
