VFS-1770 lower delays of datastore disk write for faster subscriptions

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -35,6 +35,13 @@
         {dns_worker_plugin, dns_worker_plugin},
 
         %% ===================================================================
+        %% Datastore
+        %% ===================================================================
+        %% @todo currently, these delays are lowered for faster subscriptions
+        {cache_to_disk_delay_ms, 1000},
+        {cache_to_disk_force_delay_ms, 5000},
+
+        %% ===================================================================
         %% DNS
         %% ===================================================================
 
