--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -60,8 +60,8 @@
 
     %% oz_worker config
     {oz_worker, [
-        % Developer mode - enables developer features such as REST endpoints with
-        % funcionalities used in tests.
+        % Developer mode - enables developer features such as REST endpoints
+        % with functionalities used in tests.
         {dev_mode, false},
 
         % Ports used by application
