--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -101,9 +101,13 @@
         {gui_cacert_file, "{{platform_etc_dir}}/cacerts/gui_cacert.pem"},
         {auth_config_file, "{{platform_data_dir}}/auth.config"},
 
-        %% Directory where onezone expects to find static files of a its GUI.
-        %% Any GUI (set of static files) can be placed there.
-        {gui_static_root, "/var/www/html"},
+        %% Directory where onezone tries to find static files of a custom GUI.
+        %% If the directory is not empty, it will serve the static files
+        %% from it. If not, it will fall back to default, embedded GUI.
+        {gui_custom_static_root, "/var/www/html"},
+        %% Directory where static files of default, embedded GUI are kept.
+        %% Used when gui_custom_static_root is non-existent or empty.
+        {gui_default_static_root, "{{platform_data_dir}}/gui_static"},
 
         %% HTTP redirector config
         {gui_redirect_port, 80},
