VFS-1825 fix a bug in rebar config

--- a/rebar.config
+++ b/rebar.config
@@ -45,7 +45,6 @@
     {eunit, "mkdir -p test/eunit_results"},
     %% Sometimes, in some cases epmd daemon doesn't
     %% start during eunit tests, so we need to force start it
-    {eunit, "epmd -daemon"},
-    {clean, "make gui_clean"}
+    {eunit, "epmd -daemon"}
 ]}.
 
