--- a/rebar.config
+++ b/rebar.config
@@ -22,9 +22,9 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, "3.0.0-alpha3", {git, "${ONEDATA_GIT_URL}/ctool.git", {tag, "2b37fc11c9f"}}},
-    {cluster_worker, "3.0.0-beta1", {git, "${ONEDATA_GIT_URL}/cluster-worker.git", {tag, "0f538c88"}}},
-    {gui, "1.0.3", {git, "${ONEDATA_GIT_URL}/gui.git", {tag, "28b2f06"}}},
+    {ctool, "3.0.0-beta3", {git, "${ONEDATA_GIT_URL}/ctool.git", {tag, "3.0.0-beta3"}}},
+    {cluster_worker, "3.0.0-beta3", {git, "${ONEDATA_GIT_URL}/cluster-worker.git", {tag, "3.0.0-beta3"}}},
+    {gui, "3.0.0-beta3", {git, "${ONEDATA_GIT_URL}/gui.git", {tag, "3.0.0-beta3"}}},
     {meck, "0.8.4", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.4"}}},
     {parse_trans, "2.9.2", {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
     {annotations, ".*", {git, "https://github.com/RoXeon/annotations.git", "HEAD"}},
