--- a/rebar.config
+++ b/rebar.config
@@ -23,7 +23,7 @@
 
 {deps, [
     {ctool, "3.0.0-beta3", {git, "${ONEDATA_GIT_URL}/ctool.git", {tag, "3.0.0-beta3"}}},
-    {cluster_worker, "3.0.0-beta3", {git, "${ONEDATA_GIT_URL}/cluster-worker.git", {tag, "3.0.0-beta3"}}},
+    {cluster_worker, "3.0.0-beta3", {git, "${ONEDATA_GIT_URL}/cluster-worker.git", {tag, "5b6d3b5"}}},
     {gui, "3.0.0-beta3", {git, "${ONEDATA_GIT_URL}/gui.git", {tag, "3.0.0-beta3"}}},
     {meck, "0.8.4", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.4"}}},
     {parse_trans, "2.9.2", {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
