VFS-1987 worker added

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -125,6 +125,9 @@
         {subscription_cache_size, 1000},
         {subscription_batch_ttl, 2000},
         {subscriptions_wss_port, 7443},
-        {subscroptions_https_acceptors, 50}
+        {subscroptions_https_acceptors, 50},
+
+        %% Group graph config
+        {group_graph_refresh_interval, 500}
     ]}
 ].
