VFS-2111 Adjust REST tests to new REST API prefix, add oz_api_privileges record

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -82,6 +82,8 @@
         %% REST config
         {rest_port, 8443},
         {rest_https_acceptors, 50},
+        %% Prefix to the REST API - all paths must begin with it.
+        {rest_api_prefix, "/api/v3/onezone"},
         %% Macaroons authorization
         {authorization_macaroon_expiration_seconds, 31536000}, % 1 year
 %%        {authentication_macaroon_expiration_seconds, 900}, % 15 minutes
