VFS-2111 Add rest handler for OZ API privileges manipulation

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -130,6 +130,34 @@
         {subscroptions_https_acceptors, 50},
 
         %% Group graph config
-        {group_graph_refresh_interval, 500}
+        {group_graph_refresh_interval, 500},
+
+        %% Predefined groups config - groups that are created automatically
+        %% after the application has started. If the groups exist, no action
+        %% is performed.
+        %% Each group is represented by a proplist with keys
+        %% id, name, oz_api_privileges.
+        %% Allows to specify the ID, name and OZ API privileges of every group.
+        %% oz_api_privileges can be either an explicit list of privileges or a
+        %% tuple of atoms indicating module and function to call which must
+        %% return the list of privileges.
+        {predefined_groups, [
+            [
+                {id, <<"admins">>},
+                {name, <<"admins">>},
+                {oz_api_privileges, {oz_api_privileges, all_privileges}}
+            ]
+        ]},
+
+        %% A list of tuples {onepanel_role, [group_id]}. When a user is
+        %% retrieved from onepanel, he must have a role assigned. This env
+        %% allows to define to which groups such user should be added
+        %% automatically upon first login.
+        %% If the role changes, any consecutive login will cause the user
+        %% to be added to all groups connected to his new role, but will not
+        %% cause the user to be removed from any group!
+        {onepanel_role_to_group_mapping, [
+            {<<"admin">>, [<<"admins">>]}
+        ]}
     ]}
 ].
