VFS-2111 Fix some specs, comments and TODOs

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -150,7 +150,7 @@
         ]},
 
         %% A list of tuples {onepanel_role, [group_id]}. When a user is
-        %% retrieved from onepanel, he must have a role assigned. This env
+        %% retrieved from onepanel, his role will be sent in response. This env
         %% allows to define to which groups such user should be added
         %% automatically upon first login.
         %% If the role changes, any consecutive login will cause the user
