--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -158,6 +158,10 @@
         %% cause the user to be removed from any group!
         {onepanel_role_to_group_mapping, [
             {<<"admin">>, [<<"admins">>]}
-        ]}
+        ]},
+
+        %% Onepanel interface config
+        {onepanel_rest_url, "https://127.0.0.1:9443"},
+        {onepanel_user_endpoint, "/api/v3/onepanel/user"}
     ]}
 ].
