VFS-2111 Update referenec to GUI docker

--- a/rel/data/auth.config
+++ b/rel/data/auth.config
@@ -2,6 +2,10 @@
 
 %% List of supported auth providers and their config.
 [
+    % TODO
+    {basicAuth, [
+
+    ]},
     {google, [
         % Standard config
         {auth_module, auth_google},
