--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -51,6 +51,7 @@
     ", erlang-parsetools >= 18.0"
     ", erlang-reltool >= 18.0"
     ", erlang-xmerl >= 18.0"
+    ", erlang-os_mon >= 18.0"
     ", gcc-c++ >= 4.9.0"
     ", git"
     ", golang"
