Add openssl to DEB and RPM build requirements

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -58,6 +58,7 @@
     ", libsodium-devel"
     ", libtool"
     ", ninja-build"
+    ", openssl"
     ", python"
     ", wget"}.
 {rpm_build,
@@ -78,6 +79,7 @@
     ", libsodium-dev"
     ", libtool"
     ", ninja-build"
+    ", openssl"
     ", pkg-config"
     ", python"
     ", wget"}.
