--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -111,6 +111,13 @@
         %% Used when gui_custom_static_root is non-existent or empty.
         {gui_default_static_root, "{{platform_data_dir}}/gui_static"},
 
+        %% Root path of all documentation-related static files. They are served
+        %% by following a HTTP request to a third-party server with static
+        %% files (the response is followed back to the client).
+        %% Must start with a slash and NOT end with a slash.
+        {gui_docs_static_root, "/docs"},
+        {gui_docs_server, "http://172.17.0.2:8080"},
+
         %% HTTP redirector config
         {gui_redirect_port, 80},
         {gui_redirect_acceptors, 10},
