--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -116,8 +116,8 @@
         %% Used when gui_custom_static_root is non-existent or empty.
         {gui_default_static_root, "{{platform_data_dir}}/gui_static"},
 
-        %% Decides if docs proxy shall be used. The two below envs are used
-        %% only when true.
+        %% Decides if docs proxy shall be used. Related envs are used only
+        %% when true.
         {gui_docs_proxy_enabled, true},
         %% Root path of all documentation-related static files. They are served
         %% by following a HTTP request to a third-party server with static
