VFS-2309 location service added

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -58,7 +58,7 @@
         {dev_mode, false},
 
         % Ports used by application
-        {application_ports, [53, 80, 443, 7443, 8443]},
+        {application_ports, [53, 80, 443, 7443, 7770, 7771, 8443]},
 
         %% Also used as the certificate domain and to provider CRLs.
         {http_domain, "127.0.0.1"},
@@ -144,6 +144,12 @@
         {subscription_batch_ttl, 2000},
         {subscriptions_wss_port, 7443},
         {subscroptions_https_acceptors, 50},
+
+        %% Location Service config
+        {location_service_port, 7770},
+        {location_service_rest_port, 7771},
+        {location_service_bootstrap_nodes, []},
+
 
         %% Group graph config
         {group_graph_refresh_interval, 500},
