--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -65,5 +65,9 @@
     {copy, "../cacerts", "./data/"},
     {copy, "../ozpca", "./data/"},
     {copy, "../LICENSE.txt", "./data/"},
-    {copy, "../README.md", "./data/"}
+    {copy, "../README.md", "./data/"},
+
+    %% Copy location service files
+    {mkdir, "nodejs"},
+    {copy, "../location-service", "./nodejs/"}
 ]}.
