VFS-2309 identity verification in oz init

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -33,6 +33,7 @@
         {datastore_config_plugin, datastore_config_plugin},
         {node_manager_plugin, node_manager_plugin},
         {dns_worker_plugin, dns_worker_plugin},
+        {identity_repository, dht_identity_repository},
 
         %% ===================================================================
         %% DNS
@@ -150,6 +151,10 @@
         {location_service_rest_port, 7771},
         {location_service_bootstrap_nodes, []},
 
+        %% Identity verification config
+        {public_key_refresh_interval_seconds, 600},
+        {identity_key_file, "{{platform_data_dir}}/ozpca/identity_key.pem"},
+        {identity_cert_file, "{{platform_data_dir}}/ozpca/identity_cert.pem"},
 
         %% Group graph config
         {group_graph_refresh_interval, 500},
