VFS-2154 Major refactor of rest privileges test suite and some improvements to the tested code

--- a/rel/data/auth.config
+++ b/rel/data/auth.config
@@ -2,10 +2,10 @@
 
 %% List of supported auth providers and their config.
 [
-    % TODO
-    {basicAuth, [
+    % Currently Basic Auth (login/password) has no configuration options.
+    % Just leave the tuple below to enable or remove it to disable Basic Auth.
+    {basicAuth, []},
 
-    ]},
     {google, [
         % Standard config
         {auth_module, auth_google},
