VFS-2309 owned identities init

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -33,7 +33,7 @@
         {datastore_config_plugin, datastore_config_plugin},
         {node_manager_plugin, node_manager_plugin},
         {dns_worker_plugin, dns_worker_plugin},
-        {identity_repository, dht_identity_repository},
+        {identity_repository, owned_identity_repository},
 
         %% ===================================================================
         %% DNS
