--- a/test_distributed/user_logic_test_SUITE_data/onepanel_mock_description.erl.cfg
+++ b/test_distributed/user_logic_test_SUITE_data/onepanel_mock_description.erl.cfg
@@ -20,77 +20,48 @@
 -export([rest_mocks/0, tcp_server_mocks/0]).
 
 rest_mocks() ->
-    ExpectedMacaroon = macaroon:create("a", "b", "c"),
-    ExpectedBasicAuth = <<"Basic ", (base64:encode(<<"user:password">>))/binary>>,
-    {ok, ExpectedToken} = token_utils:serialize62(ExpectedMacaroon),
-    CheckAuth = fun(Req) ->
-        case req:header(<<"macaroon">>, Req) of
-            ExpectedToken ->
-                true;
-            _ ->
-                case req:header(<<"authorization">>, Req) of
-                    ExpectedBasicAuth ->
-                        true;
-                    _ ->
-                        false
-                end
-        end
-    end,
     [
-        #rest_mock{port = 8443, path = <<"/api/v3/onezone/user">>,
+        % Mock user endpoint, as if there were some users in onepanel.
+        #rest_mock{port = 9443, path = <<"/api/v3/onepanel/user">>,
             response = fun(Req, State) ->
-                case CheckAuth(Req) of
-                    true ->
+                <<"Basic ", UserAndPassword/binary>> =
+                    req:header(<<"authorization">>, Req),
+                [User, Passwd] =
+                    binary:split(base64:decode(UserAndPassword), <<":">>),
+                {Method, _} = cowboy_req:method(Req),
+                case {Method, User, Passwd} of
+                    % user with id user1Id, credentials user1:password1
+                    % and role 'user1Role'
+                    {<<"GET">>, <<"user1">>, <<"password1">>} ->
                         ResponseBody = json_utils:encode([
-                            {<<"userId">>, <<"test_id">>},
-                            {<<"name">>, <<"test_name">>}
+                            {<<"userId">>, <<"user1Id">>},
+                            {<<"userRole">>, <<"user1Role">>}
                         ]),
-                        {#rest_response{code = 200, body = ResponseBody, content_type = <<"application/json">>}, State};
-                    _ ->
-                        {#rest_response{code = 403}, State}
-                end
-            end,
-            initial_state = undefined},
-        #rest_mock{port = 8443, path = <<"/api/v3/onezone/user/spaces">>,
-            response = fun(Req, State) ->
-                case CheckAuth(Req) of
-                    true ->
+                        {#rest_response{code = 200, body = ResponseBody,
+                            content_type = <<"application/json">>}, State};
+                    % user with id user2Id, credentials user2:password2
+                    % and role 'user2Role'
+                    {<<"GET">>, <<"user2">>, <<"password2">>} ->
                         ResponseBody = json_utils:encode([
-                            {<<"default">>, <<"space0">>},
-                            {<<"spaces">>, [<<"space0">>]}
+                            {<<"userId">>, <<"user2Id">>},
+                            {<<"userRole">>, <<"user2Role">>}
                         ]),
-                        {#rest_response{code = 200, body = ResponseBody, content_type = <<"application/json">>}, State};
+                        {#rest_response{code = 200, body = ResponseBody,
+                            content_type = <<"application/json">>}, State};
+                    % Change password endpoint, working for user 3
+                    {<<"PUT">>, <<"user3">>, <<"password3">>} ->
+                        case req:body(Req) of
+                            % Make sure body contains a json with new password
+                            <<"{\"password\":", _/binary>> ->
+                                {#rest_response{code = 204}, State};
+                            _ ->
+                                {#rest_response{code = 401}, State}
+                        end;
                     _ ->
-                        {#rest_response{code = 403}, State}
+                        {#rest_response{code = 401}, State}
                 end
-            end,
-            initial_state = undefined},
-        #rest_mock{port = 8443, path = <<"/api/v3/onezone/user/groups">>,
-            response = fun(Req, State) ->
-                case CheckAuth(Req) of
-                    true ->
-                        ResponseBody = json_utils:encode([
-                            {<<"groups">>, []}
-                        ]),
-                        {#rest_response{code = 200, body = ResponseBody, content_type = <<"application/json">>}, State};
-                    _ ->
-                        {#rest_response{code = 403}, State}
-                end
-            end,
-            initial_state = undefined},
-        #rest_mock{port = 8443, path = <<"/api/v3/onezone/user/effective_groups">>,
-            response = fun(Req, State) ->
-                case CheckAuth(Req) of
-                    true ->
-                        ResponseBody = json_utils:encode([
-                            {<<"effective_groups">>, []}
-                        ]),
-                        {#rest_response{code = 200, body = ResponseBody, content_type = <<"application/json">>}, State};
-                    _ ->
-                        {#rest_response{code = 403}, State}
-                end
-            end,
-            initial_state = undefined}
+            end
+        }
     ].
 
 tcp_server_mocks() -> [].
