--- a/location-service/package.json
+++ b/location-service/package.json
@@ -8,7 +8,10 @@
     "dependencies": {
         "nunjucks": "2.4.2",
         "couchbase": "~2.1.5",
+        "readable-stream": "^2.1.5",
         "commander": "~2.9.0",
+        "kad": "^1.5.11",
+        "kad-memstore": "~0.0.1",
         "kad-consistency": "~0.0.2",
         "kad-spartacus": "~0.0.6",
         "async": "2.0.0-rc.3",
