VFS-2156 Remove GUI files

--- a/test_distributed/user_logic_test_SUITE_data/onepanel_mock_description.erl.cfg
+++ b/test_distributed/user_logic_test_SUITE_data/onepanel_mock_description.erl.cfg
@@ -22,7 +22,7 @@
 rest_mocks() ->
     [
         % Mock user endpoint, as if there were some users in onepanel.
-        #rest_mock{port = 9443, path = <<"/api/v3/onepanel/user">>,
+        #rest_mock{port = 9443, path = <<"/api/v3/onepanel/users/:user">>,
             response = fun(Req, State) ->
                 <<"Basic ", UserAndPassword/binary>> =
                     req:header(<<"authorization">>, Req),
