--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -148,8 +148,9 @@
 
         %% Location Service config
         {location_service_port, 7770},
+        {location_service_enabled, false},
         {location_service_rest_port, 7771},
-        {location_service_bootstrap_nodes, []},
+        {location_service_bootstrap_nodes, ['onedata.org']},
 
         %% Identity verification config
         {public_key_refresh_interval_seconds, 600},
