--- a/rel/data/auth.config
+++ b/rel/data/auth.config
@@ -4,70 +4,81 @@
 [
     % Currently Basic Auth (login/password) has no configuration options.
     % Just leave the tuple below to enable or remove it to disable Basic Auth.
-    {basicAuth, []},
+    {basicAuth, []}
 
-    {google, [
-        % Standard config
-        {auth_module, auth_google},
-        {app_id, <<"app id">>},
-        {app_secret, <<"app secret">>},
-        % Provider specific config
-        {xrds_endpoint,
-            <<"https://accounts.google.com/.well-known/openid-configuration">>}
+    % Currently other authentication options are disabled by default, because
+    % they require cumbersome configuration per each OpenID provider.
 
-    ]},
-
-    {facebook, [
-        % Standard config
-        {auth_module, auth_facebook},
-        {app_id, <<"app id">>},
-        {app_secret, <<"app secret">>},
-        % Provider specific config
-        {authorize_endpoint,
-            <<"https://www.facebook.com/dialog/oauth">>},
-        {access_token_endpoint,
-            <<"https://graph.facebook.com/oauth/access_token">>},
-        {user_info_endpoint,
-            <<"https://graph.facebook.com/me">>}
-    ]},
-
-    {github, [
-        % Standard config
-        {auth_module, auth_github},
-        {app_id, <<"app id">>},
-        {app_secret, <<"app secret">>},
-        % Provider specific config
-        {authorize_endpoint,
-            <<"https://github.com/login/oauth/authorize">>},
-        {access_token_endpoint,
-            <<"https://github.com/login/oauth/access_token">>},
-        {user_info_endpoint,
-            <<"https://api.github.com/user">>},
-        {user_emails_endpoint,
-            <<"https://api.github.com/user/emails">>}
-    ]},
-
-    {dropbox, [
-        {auth_module, auth_dropbox},
-        {app_id, <<"app id">>},
-        {app_secret, <<"app secret">>},
-        % Provider specific config
-        {authorize_endpoint,
-            <<"https://www.dropbox.com/1/oauth2/authorize">>},
-        {access_token_endpoint,
-            <<"https://api.dropbox.com/1/oauth2/token">>},
-        {user_info_endpoint,
-            <<"https://api.dropbox.com/1/account/info">>}
-
-    ]},
-
-    {plgrid, [
-        % Standard config
-        {auth_module, auth_plgrid},
-        % Provider specific config
-        {xrds_endpoint,
-            <<"https://openid.plgrid.pl/gateway">>},
-        {logout_endpoint,
-            <<"https://openid.plgrid.pl/logout">>}
-    ]}
+%%    {google, [
+%%        % Standard config
+%%        {auth_module, auth_google},
+%%        {app_id, <<"app id">>},
+%%        {app_secret, <<"app secret">>},
+%%        % Provider specific config
+%%        {xrds_endpoint,
+%%            <<"https://accounts.google.com/.well-known/openid-configuration">>}
+%%
+%%    ]},
+%%
+%%    {facebook, [
+%%        % Standard config
+%%        {auth_module, auth_facebook},
+%%        {app_id, <<"app id">>},
+%%        {app_secret, <<"app secret">>},
+%%        % Provider specific config
+%%        {authorize_endpoint,
+%%            <<"https://www.facebook.com/dialog/oauth">>},
+%%        {access_token_endpoint,
+%%            <<"https://graph.facebook.com/oauth/access_token">>},
+%%        {user_info_endpoint,
+%%            <<"https://graph.facebook.com/me">>}
+%%    ]},
+%%
+%%    {github, [
+%%        % Standard config
+%%        {auth_module, auth_github},
+%%        {app_id, <<"app id">>},
+%%        {app_secret, <<"app secret">>},
+%%        % Provider specific config
+%%        {authorize_endpoint,
+%%            <<"https://github.com/login/oauth/authorize">>},
+%%        {access_token_endpoint,
+%%            <<"https://github.com/login/oauth/access_token">>},
+%%        {user_info_endpoint,
+%%            <<"https://api.github.com/user">>},
+%%        {user_emails_endpoint,
+%%            <<"https://api.github.com/user/emails">>}
+%%    ]},
+%%
+%%    {dropbox, [
+%%        {auth_module, auth_dropbox},
+%%        {app_id, <<"app id">>},
+%%        {app_secret, <<"app secret">>},
+%%        % Provider specific config
+%%        {authorize_endpoint,
+%%            <<"https://www.dropbox.com/1/oauth2/authorize">>},
+%%        {access_token_endpoint,
+%%            <<"https://api.dropbox.com/1/oauth2/token">>},
+%%        {user_info_endpoint,
+%%            <<"https://api.dropbox.com/1/account/info">>}
+%%
+%%    ]},
+%%
+%%    {plgrid, [
+%%        % Standard config
+%%        {auth_module, auth_plgrid},
+%%        % Provider specific config
+%%        {xrds_endpoint,
+%%            <<"https://openid.plgrid.pl/gateway">>},
+%%        {logout_endpoint,
+%%            <<"https://openid.plgrid.pl/logout">>}
+%%    ]},
+%%
+%%    {indigo, [
+%%        {auth_module, auth_indigo},
+%%        {app_id, <<"app id">>},
+%%        {app_secret, <<"app secret">>},
+%%        % Provider specific config
+%%        {xrds_endpoint, <<"https://iam-test.indigo-datacloud.eu/.well-known/openid-configuration">>}
+%%    ]}
 ].
