VFS-2156 Change onepanel config env variables types

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -177,7 +177,7 @@
         }},
 
         %% Onepanel interface config
-        {onepanel_rest_url, <<"https://127.0.0.1:9443">>},
-        {onepanel_users_endpoint, <<"/api/v3/onepanel/users/">>}
+        {onepanel_rest_url, "https://127.0.0.1:9443"},
+        {onepanel_users_endpoint, "/api/v3/onepanel/users/"}
     ]}
 ].
