VFS-2397 - oai handler skeleton

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -178,6 +178,11 @@
 
         %% Onepanel interface config
         {onepanel_rest_url, "https://127.0.0.1:9443"},
-        {onepanel_user_endpoint, "/api/v3/onepanel/user"}
+        {onepanel_user_endpoint, "/api/v3/onepanel/user"},
+
+        %% OAI-PMH config
+        %% Prefix to the OAI-PMH API - all paths must begin with it
+        {oai_pmh_prefix, "/oai_pmh"},
+        {supported, oai_pmh_version, "2.0"}
     ]}
 ].
