VFS-2468 Add nodejs to packages requirements

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -151,6 +151,7 @@
         {location_service_enabled, false},
         {location_service_rest_port, 7771},
         {location_service_bootstrap_nodes, ['onedata.org']},
+        {location_service_lib_path, "{{platform_lib_dir}}/location-service"},
 
         %% Identity verification config
         {public_key_refresh_interval_seconds, 600},
