--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -68,6 +68,5 @@
     {copy, "../README.md", "./data/"},
 
     %% Copy location service files
-    {mkdir, "nodejs"},
-    {copy, "../location-service", "./nodejs/"}
+    {copy, "../location-service/", "./lib/"}
 ]}.
