VFS-2397 -skeleteon of oai interface, oai_ver_processor_behaviour added

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -183,6 +183,6 @@
         %% OAI-PMH config
         %% Prefix to the OAI-PMH API - all paths must begin with it
         {oai_pmh_prefix, "/oai_pmh"},
-        {supported, oai_pmh_version, "2.0"}
+        {supported_oai_pmh_version, "2.0"}
     ]}
 ].
