VFS-2500 described location service config options

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -147,10 +147,14 @@
         {subscroptions_https_acceptors, 50},
 
         %% Location Service config
-        {location_service_port, 7770},
         {location_service_enabled, false},
+        %% Port of DHT client
+        {location_service_port, 7770},
+        %% Port for communication between OZ and DHT client (internal use only)
         {location_service_rest_port, 7771},
-        {location_service_bootstrap_nodes, ['onedata.org']},
+        %% List of any other known OZ with DHT clients running
+        %% Port of DHT client is mandatory
+        {location_service_bootstrap_nodes, ['onedata.org:7770']},
 
         %% Identity verification config
         {public_key_refresh_interval_seconds, 600},
