--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -182,7 +182,6 @@
 
         %% OAI-PMH config
         %% Prefix to the OAI-PMH API - all paths must begin with it
-        {oai_pmh_prefix, "/oai_pmh"},
-        {supported_oai_pmh_version, "2.0"}
+        {oai_pmh_prefix, "/oai_pmh"}
     ]}
 ].
