--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -152,6 +152,7 @@
         {location_service_rest_port, 7771},
         {location_service_bootstrap_nodes, ['onedata.org']},
         {location_service_lib_path, "{{platform_lib_dir}}/location-service"},
+        {location_service_log_level, 2},
 
         %% Identity verification config
         {public_key_refresh_interval_seconds, 600},
